--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,11 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Ignore more files
+*.pdf
+*.xlsx
+*.csv
+*.RData
+*.Rproj
+*.txt
